resources/css/index.css
.navbar-header{
  float: right;
}

.navbar-default .navbar-nav .active{
  color: #399BDF;
  background-color: inherit;
}

.jumbotron {
  height: 44rem;
  padding-top: 10rem;
  text-align: center;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  color: white;
  text-shadow:
  -1px -1px 0 #000,
  1px -1px 0 #000,
  -1px 1px 0 #000,
  1px 1px 0 #000;
}
.buttonclass {
  position: relative;
  top: -16rem;
  width: 100%;
  text-align: center;
}

.slick-list{
  position: relative;
  display: block;
}
.slick-track{
  position: relative;
  top: 0;
  left: 0;
  display: block;
}
.background-bike {
  background-image: url("../images/jumbotron-bike.jpg");
}

.background-beer {
  background-image: url("../images/jumbotron-beer.jpg");
}

.background-flowers {
  background-image: url("../images/jumbotron-flowers.jpg");
}

.background-duffel {
  background-image: url("../images/jumbotron-duffel.jpg");
}

.FeaturedProject{
  margin-top: 32px;
}
.feature{
  margin-bottom: 32px;
}
.ProjectInfo{
  margin-bottom: 5.85rem;
}
strong{
  text-align: center;
}

.foot{
  width: 100%;
  background-color: #f3f3f3;
  padding: 5.2rem 0;
}

.col-md-6:focus {
    outline: -webkit-focus-ring-color auto 5px;
    outline-color: -webkit-focus-ring-color;
    outline-style: auto;
    outline-width: 5px;
  }
  .buttonfoot {
    position: relative;
    margin-top: 2rem;
    width: 100%;
    text-align: center;
  }

  .image-container {
    overflow: hidden;
  }


  .image-container img:hover {
  opacity: 1;
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}
.image-container img {
  opacity: 0.7;
  transition: transform .5s,
  opacity .5s;
  transition: transform .5s,
  opacity .5s;
}

